log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Fri 31 Mar 2023 05:03:49 PM UTC: 
 tests:  0|6
total_score: 0/70
384eec4
Fri 31 Mar 2023 05:13:54 PM UTC: 
 arraylist.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:18:19: error: ‘data’ undeclared (first use in this function)
   18 |   arreglo->data = data;
      |                   ^~~~
arraylist.c:18:19: note: each undeclared identifier is reported only once for each function it appears in
arraylist.c:19:21: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   19 |   arreglo->capacity = NULL;
      |                     ^
arraylist.c:20:17: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   20 |   arreglo->size = NULL;
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
b4957f9
Fri 31 Mar 2023 05:17:02 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:19:21: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   19 |   arreglo->capacity = NULL;
      |                     ^
arraylist.c:20:17: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   20 |   arreglo->size = NULL;
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
ba7a213
Fri 31 Mar 2023 05:17:52 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
ca9292e
Fri 31 Mar 2023 05:29:32 PM UTC: 
 arraylist.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
5e71694
Fri 31 Mar 2023 05:30:38 PM UTC: 
 arraylist.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|4
total_score: 20/70
ac9e206
Fri 31 Mar 2023 05:38:41 PM UTC: 
 arraylist.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  3|4
total_score: 20/70
7c480eb
